css/style.css
/* ... */
ins { background-color: #ff9; color: #000; text-decoration: none; }

mark { background-color: #ff9; color: #000; font-style: italic; font-weight: bold; }

del { text-decoration: line-through; }

abbr[title], dfn[title] { border-bottom: 1px dotted; cursor: help; }

table { border-collapse: collapse; border-spacing: 0; }

hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }

input, select { vertical-align: middle; }


/**
 * Font normalization inspired by YUI Library's fonts.css: developer.yahoo.com/yui/
 */

body { font:13px/1.231 sans-serif; *font-size:small; /* Hack retained to preserve specificity */
-webkit-text-stroke: 1px transparent; } /* VENANZI: Enable Antialiasing on chrome */
select, input, textarea, button { font:99% sans-serif; }

/* Normalize monospace sizing:
   en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome */
pre, code, kbd, samp { font-family: monospace, sans-serif; }


/**
 * Minimal base styles.
 */

/* Always force a scrollbar in non-IE */
html { overflow-y: scroll; }

/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
a:hover, a:active { outline: none; }

ul, ol { margin-left: 2em; }
ol { list-style-type: decimal; }

/* Remove margins for navigation lists */
nav ul, nav li { margin: 0; list-style:none; list-style-image: none; }

small { font-size: 85%; }
strong, th { font-weight: bold; }

td { vertical-align: top; }

/* Set sub, sup without affecting line-height: gist.github.com/413930 */
sub, sup { font-size: 75%; line-height: 0; position: relative; }
sup { top: -0.5em; }
sub { bottom: -0.25em; }

pre {
  /* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
  white-space: pre; white-space: pre-wrap; word-wrap: break-word;
  padding: 15px;
}

textarea { overflow: auto; } /* www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */

.ie6 legend, .ie7 legend { margin-left: -7px; } 

/* Align checkboxes, radios, text inputs with their label by: Thierry Koblentz tjkdesign.com/ez-css/css/base.css  */
input[type="radio"] { vertical-align: text-bottom; }
input[type="checkbox"] { vertical-align: bottom; }
.ie7 input[type="checkbox"] { vertical-align: baseline; }
.ie6 input { vertical-align: text-bottom; }

/* Hand cursor on clickable input elements */
label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }

/* Webkit browsers add a 2px margin outside the chrome of form elements */
button, input, select, textarea { margin: 0; }

/* Colors for form validity */
input:valid, textarea:valid   {  }
input:invalid, textarea:invalid {
   border-radius: 1px; -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red; box-shadow: 0px 0px 5px red;
}
.no-boxshadow input:invalid, .no-boxshadow textarea:invalid { background-color: #f0dddd; }


/* These selection declarations have to be separate
   No text-shadow: twitter.com/miketaylr/status/12228805301
   Also: hot pink! */
::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
::selection { background:#FF5E99; color:#fff; text-shadow: none; }

/* j.mp/webkit-tap-highlight-color */
a:link { -webkit-tap-highlight-color: #FF5E99; }

/* Make buttons play nice in IE:
   www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
button {  width: auto; overflow: visible; }

/* Bicubic resizing for non-native sized IMG:
   code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/ */
.ie7 img { -ms-interpolation-mode: bicubic; }

/**
 * You might tweak these..
 */

body, select, input, textarea {
  /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */
  color: #444;
  /* Set your base font here, to apply evenly */
  /* font-family: Georgia, serif;  */
}

/* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
h1, h2, h3, h4, h5, h6 { font-weight: bold; }

a, a:active, a:visited { color: #607890; }
a:hover { color: #036; }


/**
 * Primary styles
 *
 * Author: Marco Venanzi
 */


/*-------------------*/
/* GENERAL SETTINGS  */
/*-------------------*/
body {
    height:100%;
    font: 12px/12px  "DekarRegular" "Lucida Sans", "Lucida Grande", sans-serif;
    -color: #000;
    background: #fdfdfd url(../images/bg-stripe.png) repeat scroll;
}
a {
    text-decoration:none;
    color: #000;
}
a:hover {
    text-decoration:none;
    color: #0285da;
}

/*
 * HELPERS - Classi generiche per effetti e ombre
 */

.clearfix {
    clear: both;
}

.shadow {
    -moz-box-shadow:  0px 5px  5px #ccc;
    -webkit-box-shadow:   0px 5px  5px #ccc;
    box-shadow:  0px 5px 5px #ccc;
    display: block;
}

.not-selectable{
    -webkit-user-select: none;
     -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}

.shadow-blur {
    -moz-box-shadow: 1px 1px 5px #ccc;
    -webkit-box-shadow: 1px 1px 5px #ccc;
    box-shadow: 1px 1px 5px #ccc;
}

.default-transition {
    -webkit-transition:All 1s ease-in-out;
    -moz-transition:All 1s ease-in-out;
    -o-transition:All 1s ease-in-out;
}

.required{
    color:#E00;
    top:0;
}

/* Generated by Font Squirrel (http://www.fontsquirrel.com) on May 27, 2011 */

@font-face {
    font-family: 'DekarRegular';
    src: url('../fonts/dekar-webfont.eot');
    src: url('../fonts/dekar-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/dekar-webfont.woff') format('woff'),
    url('../fonts/dekar-webfont.ttf') format('truetype'),
    url('../fonts/dekar-webfont.svg#DekarRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

/*-------------------*/
/*     LANDING PAGE  */
/*-------------------*/


#landing #container {
    margin: 90px auto;
    width: 690px;
}
#landing  img.header-img {
    margin-bottom: 36px;
    display:block;
}
/* ... */

